# cppgc

./: CMakeLists.txt  CTestConfig.cmake
cppgc/: CMakeLists.txt
cppgc/include/: gc.h
cppgc/include/algorithm/: mark_sweep.h
cppgc/include/thread/: single_thread.h
cppgc/include/trigger/: counting.h  new_fail.h  trigger_common.h
cppgc/tests/: test_conversion.cpp  test_new_fail_trigger.cpp
include/: gc.h
include/algorithm/: mark_sweep.h  reference_count.h
include/traits/: conversion.h  static_check.h
include/trigger/: counting.h  manual.h  new_fail.h  trigger_common.h  trigger_or.h
tests/: CMakeLists.txt  main.cpp  test_counting_trigger.cpp  test_delete.cpp  test_handle_const.cpp  test_mark_sweep.cpp  test_mark_sweep_pin.cpp  test_ref_count.cpp  test_ref_count_pin.cpp
tests/src/: main.cpp  test_conversion.cpp  test_counting_trigger.cpp  test_delete.cpp  test_handle_const.cpp  test_mark_sweep.cpp  test_mark_sweep_pin.cpp  test_new_fail_trigger.cpp  test_ref_count.cpp  test_ref_count_pin.cpp
